--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,6 @@
 	    <p style = "color: red;">TRUMP TRUMP TRUMP TRUMP TRUMP</p>
 	    <p style = "color: white;">TRUMP TRUMP TRUMP TRUMP TRUMP</p>
 	    <p style = "color: blue;">TRUMP TRUMP TRUMP TRUMP TRUMP</p>
-			<button style = "color: #00aced;">Make a tweet, motherfuckers</button>
+			<button style = "background-color: #00aced;">Make a tweet, motherfuckers</button>
     </div>
 </html>
