--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -91,16 +91,32 @@ ga('send', 'pageview');
 	<div class="vcenter">
 	<div class="content">
 	<h5>- The Trumpitter</h5>
-	<h2>This is where we make the tweet!</h2>
-	<a href="https://secure.donaldjtrump.com/we-made-history?amount=150&utm_campaign=djt_website_donate&utm_source=website&utm_medium=web&utm_content=top_nav" class="btn btn-text-white btn-border-white arrow-btn">Contribute<span class="arrow icon"></span></a>
-	<%= button_to 'change name', f01_path(user: user)%>
+	<h2 id= "tweet1"> asdfasdf </h2>
+	<h2 id= "tweet2" hidden> fdsafdsa </h2>
+	<!--
+	<a href="https://secure.donaldjtrump.com/we-made-history?amount=150&utm_campaign=djt_website_donate&utm_source=website&utm_medium=web&utm_content=top_nav" class="btn btn-text-white btn-border-white arrow-btn">Generate A Tweet</a>
+	-->
+
+	<button onclick="changeText();" style='color:black; background-color: white;'>
+		Write the tweet!
+	</button>
+
+	<script>
+	function changeText(){
+		var one = document.getElementById('tweet1');
+		var two = document.getElementById('tweet2');
+		if (one.hidden){
+			one.hidden = false;
+			two.hidden = true;
+		} else {
+			two.hidden = false;
+			one.hidden = true;
+		}
+	}
+	</script>
 
 
-
-
-
-
-
+	
 
 	</div>
 	</div>
@@ -113,14 +129,12 @@ ga('send', 'pageview');
 	</section>
 	<section class="split-callouts">
 	<div class="callout callout-2 centered m-content-15">
-	<h4>Help fulfill our promise to Make America Great Again!</h4>
-	<p>Join Our Movement!</p>
-	
+	<h4>Get Memed</h4>
+		<iframe width="500" height="315" src="https://www.youtube.com/embed/5GnYtuhZXzo" frameborder="0" allowfullscreen></iframe>
 	</div>
 	<div class="callout callout-1 centered m-content-15 full-bg overlay overlay-navy-80" style="background-image: url('https://assets.donaldjtrump.com/2017/web/homepage/callout_promiseskept.jpg');">
-	<h4>Learn About Your President</h4>
-	<p>The video should speak for itself.<style type="text/css">.overlay-navy-80:after {background-color: rgba(9,29,42,0.4) !important}</style></p>
-	<a class="play-popup-video btn-play icon">Play</a>
+	<h4>Get Learned</h4>
+		<iframe width="500" height="315" src="https://www.youtube.com/embed/DnpO_RTSNmQ" frameborder="0" allowfullscreen></iframe>
 	</div>
 	<div class="clear"></div>
 	</section>
@@ -321,6 +335,9 @@ ga('send', 'pageview');
 	    <img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=nus1w&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
 	    <img height="1" width="1" style="display:none;" alt="" src="https://t.co/i/adsct?txn_id=nus1w&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
 	</noscript>
+	<script>
+
+	</script>
 
 	</footer>
 
